<resources>
    <string name="app_name">UI_Training</string>
    <string name="DrOlegMayami"><u>Dr. Oleg Mayami</u></string>
    <string name="DentalSurgeon">Dental surgeon</string>
    <string name="YourFriendlyDentalFriend">Your friendly Dental Friend</string>
    <string name="MakeAnAppointment">Make an appointment</string>
    <string name="Email">oleg.mayami93@gmail.com</string>
    <string name="EmailUs">Email us</string>
    <string name="URl">www.dental.com</string>
    <string name="VisitWebsite">Visit website</string>
    <string name="WhatsAppMe">WhatsApp Me</string>
    <string name="WhatsApp">WhatsApp</string>
    <string name="SaveToPhonebook">Save to phonebook</string>
    <string name="SaveContact">Save contact</string>
    <string name="OurLocation">Our location:</string>
    <string name="Place">Abdumomunova 146</string>
    <string name="WeAreHere">Shopping center Asia Mall \n1st floor\u000D</string>
    <string name="EmailImage">Email image</string>
    <string name="URLImage">URL Image</string>
    <string name="ContactImage">Contact Image</string>
    <string name="LocationImage">Location Image</string>
    <string name="DentalClinic">Dental Clinic</string>
    <string name="ToCall">To Call</string>
    <string name="Telegram">Telegram</string>
    <string name="open_map">Open map</string>
    <string name="text">Text</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="scan_to_connect">Scan to connect</string>
    <string name="phone_number">+996 (774) 678 876</string>



</resources>