<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:src="@drawable/happy_man_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fade_img" />

    <ImageView
        android:id="@+id/fade_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="1"
        android:src="@drawable/rectangle_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/white_rectangle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:elevation="15dp"
        android:src="@drawable/rectangle_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Portrait"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:elevation="16dp"
        android:src="@drawable/photo3__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:fontFamily="@font/opensans"
        android:text="@string/DrOlegMayami"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/white_rectangle"
        app:layout_constraintStart_toStartOf="@+id/white_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/Portrait" />

    <ImageView
        android:id="@+id/call_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:elevation="16dp"
        android:src="@drawable/call_ico"
        app:layout_constraintBottom_toBottomOf="@+id/white_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/white_rectangle"
        app:layout_constraintStart_toStartOf="@+id/white_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/name_text2"
        android:onClick="onClickMakeAppointment"/>

    <ImageView
        android:id="@+id/mail_mg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="16dp"
        android:src="@drawable/mail_icon"
        app:layout_constraintBottom_toBottomOf="@+id/call_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/call_img"
        android:onClick="onClickEmailMe"/>

    <ImageView
        android:id="@+id/msg_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:src="@drawable/msg_ico"
        app:layout_constraintBottom_toBottomOf="@+id/call_img"
        app:layout_constraintEnd_toStartOf="@+id/call_img"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickText"/>

    <TextView
        android:id="@+id/msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:fontFamily="@font/opensans"
        android:text="@string/text"
        app:layout_constraintEnd_toEndOf="@+id/msg_img"
        app:layout_constraintStart_toStartOf="@+id/msg_img"
        app:layout_constraintTop_toBottomOf="@+id/msg_img" />

    <TextView
        android:id="@+id/call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:fontFamily="@font/opensans"
        android:text="@string/call"
        app:layout_constraintEnd_toEndOf="@+id/call_img"
        app:layout_constraintStart_toStartOf="@+id/call_img"
        app:layout_constraintTop_toBottomOf="@+id/call_img" />

    <TextView
        android:id="@+id/mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:fontFamily="@font/opensans"

        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/mail_mg"
        app:layout_constraintStart_toStartOf="@+id/mail_mg"
        app:layout_constraintTop_toBottomOf="@+id/mail_mg" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/qr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/white_rectangle" />

    <TextView
        android:id="@+id/scan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/opensans"
        android:text="@string/scan_to_connect"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/number_text"
        app:layout_constraintStart_toEndOf="@+id/qr_code"
        app:layout_constraintTop_toTopOf="@+id/qr_code" />

    <TextView
        android:id="@+id/number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        android:text="@string/phone_number"
        android:textColor="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@+id/scan_text"
        app:layout_constraintTop_toBottomOf="@+id/scan_text" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        android:text="@string/Email"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code"
        app:layout_constraintStart_toStartOf="@+id/number_text"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/website_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        android:fontFamily="@font/opensans"
        android:gravity="center_vertical"
        android:onClick="onClickOpenWebpage"
        android:text="@string/URl"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/web_icon"
        app:iconTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        android:fontFamily="@font/opensans"
        android:gravity="center_vertical"
        android:onClick="onClickFindMeOnTheMap"
        android:text="@string/Place"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/location_icon"
        app:iconTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website_button" />

    <ImageView
        android:id="@+id/fb_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fb_ico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_button"
        android:onClick="onClickFacebook"/>

    <ImageView
        android:id="@+id/inst_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/inst_ico"
        app:layout_constraintBottom_toBottomOf="@+id/fb_img"
        app:layout_constraintEnd_toStartOf="@+id/fb_img"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickInstagram"/>

    <ImageView
        android:id="@+id/linkedin_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/linkedin_ico"
        app:layout_constraintBottom_toBottomOf="@+id/fb_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fb_img"
        android:onClick="onClickLinkedIN"/>

</androidx.constraintlayout.widget.ConstraintLayout>